name:                xhb-atom
version:             0.1.0.0
synopsis:            Atom cache for XHB
description:         Atom cache for XHB
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+xhb-atom@gmail.com>

category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/xhb-atom.git

library
  build-depends:       base         >= 4.7  && < 4.8,
                       mtl          >= 2.2  && < 3.0,
                       transformers >= 0.4  && < 0.5,
                       xhb          >= 0.5  && < 0.6,
                       unordered-containers >= 0.2.5

  exposed-modules:     Graphics.XHB.Atom

  other-extensions:    DeriveDataTypeable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       OverlappingInstances,
                       UndecidableInstances

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
